deployments/world/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world
  labels:
    app: world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: world
  template:
    metadata:
      labels:
        app: world
    spec:
      containers:
      - name: world
        image: lzbgt/world:latest
        ports:
        - containerPort: 8080
