deployments/world/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: world
  labels:
    app: world
spec:
  #type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: world
